removed unnecessary code

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,6 @@
 <body>
     <a href="./installation.html">Installation</a><br>
     <a href="./widmer.html">Über mich</a><br>
-    <a href="./video.html">Video</a><br>
-    <a href="./carousel.html">Carousel</a>
+    <a href="./video.html">Video / Audio / Bilder</a><br>
 </body>
 </html>
