--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <a href="./media.html">Video / Audio / Bilder</a><br>
     <a href="./carousel.html">Carousel</a><br>
     <a href="./animation.html">Animationen</a><br>
-    <a href="./scrollAnimation.html">Scroll-aktivierte Animationen</a><br>
+    <a href="./scrollAnimation.html">Scroll-aktivierte Animation</a><br>
+    <a href="./svgAnimation.html">SVG Animation</a><br>
+    <a href="./canvas.html">HTML Canvas</a>
 </body>
 
 </html>
