--- a/scrollAnimation.html
+++ b/scrollAnimation.html
@@ -5,11 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Scroll Animation</title>
+    <link rel="stylesheet" href="./css/scrollAnimation.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 
 <body>
-
+    <div class="item" data-aos="example-anim1">This is some important text</div>
+    <div class="item" data-aos="example-anim2">Some more important text</div>
+    <div class="item" data-aos="example-anim3">And even more important text</div>
+    <div class="item" data-aos="fade-right">This is unimportant text</div>
+    <div class="item" data-aos="flip-left">Do not read this</div>
+    <div class="item" data-aos="zoom-in-up">Only a few more boxes to go</div>
+    <div class="item" data-aos="fade-down">You're almost at the end</div>
+    <div class="item" data-aos="fade-zoom-in">This is the end of the page</div>
 </body>
+<script src="js/scrollScript.js"></script>
 
 </html>
